Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>holaa</h1>
-        <p>este es un parrafo</p>
+        <h1>Este es un titulo</h1>
+        <p>este es un parrafo
+            hola mundo 
+        </p>
     </body>
 </html>
