--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <div>Cabecera</div>
+        <div id="cabecera">Cabecera</div>
         <h1>Este es un titulo</h1>
         <p>este es un parrafo
             hola mundo 
