Cambios desde github blogpost.html
xd

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,6 @@
         <p>este es un parrafo
             hola mundo 
         </p>
-        <p>Mucho texto</p>
+        <p>Mucho textoooooooooo :)</p>
     </body>
 </html>
