--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Titulo</title>
+        <title>Titulo 2.0
+        </title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
